styles.css
/* ... */
#id_searchcontainer .search-box,
#id_searchcontainer .search-results {
    display: none;
}

#faux-search-button {
    width: 108px;
    height: 64px;
    background-color: #f3f9ff;
    border-radius: 3px;
    cursor: pointer;
    order: -1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-left: 48px;
}

.faux-search-button-icon {
    height: 22px;
    width: 22px;
    background-image: url([[pix:mod_englishcentral|add-video-icon]]);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 22px;
    margin-bottom: 6px;
}

.faux-search-button-text {
    font-weight: 500;
    font-size: 9px;
    line-height: 16px;
    text-transform: uppercase;
    color: #1f3c67;
    min-width: 108px;
    text-align: center;
}

#search-inner-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 36px 24px;
}

#id_searchterm {
    padding: 12px 18px;
    background: #fff;
    border: 1px solid #c6ccd1;
    border-radius: 6px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

#search-label {
    margin-bottom: -6px;
}

#search-fields-main {
    display: flex;
    align-items: flex-start;
}

#search-fields-main > dd:first-of-type {
    flex-grow: 1;
}


#id_searchbutton {
    padding-top: 13px;
    padding-bottom: 13px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border: none;
}

#id_searchbutton.btn-primary:focus,
#id_searchbutton.btn-primary.focus {
    outline: 0 solid #f5faff;
    box-shadow: inset 0 0 0 3px #4197e3;
}

#search-fields-advanced {
    display: flex;
    align-items: center;
    padding-top: 12px;
}

#search-inner-container .search-form dd {
    margin-bottom: 0;
}

#search-fields-advanced .checkboxgroup.level {
    padding-bottom: 0;
}

/*
.result-thumb {
    height: 110px;
    width: 178px;
}
*/

/* Left-aligning activity header, centered in Moodle4 by defaiult */
#page-mod-englishcentral-view .header-maxwidth,
#page-mod-englishcentral-report .header-maxwidth,
#page-mod-englishcentral-view .secondary-navigation .navigation .nav-tabs,
#page-mod-englishcentral-report .secondary-navigation .navigation .nav-tabs {
    max-width: none;
}


#close-search-button {
    position: absolute;
    top: 18px;
    right: 18px;
    display: none;
    cursor: pointer;
    height: 14px;
    width: 14px;
    background-image: url([[pix:mod_englishcentral|times-button]]);
    background-position: center center;
    background-repeat: no-repeat;
}

#close-search-button:hover {
    -webkit-transform: scale(1.2); /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
    -ms-transform: scale(1.2); /* IE 9 */
    transform: scale(1.2); /* IE 10, Fx 16+, Op 12.1+ */
}

#page-mod-englishcentral-view .video-info {
    position: absolute;
    right: 12px;
    top: 12px;
    height: 36px;
    width: 36px;
    background-color: #fff;
    background-image: url([[pix:mod_englishcentral|ec-raw-logo]]);
    background-repeat: no-repeat;
    background-size: 17px 12.5px;
    background-position: center;
    border: 1px solid #e9ecee;
    border-radius: 100%;
}

#page-mod-englishcentral-view .video-info:hover {
    border: 3px solid #e2f4ff;
    border-radius: 100%;
}
#page-mod-englishcentral-view .page-mod-englishcentral-hide {
    display: none;
}
body.poodll-ec-embed #page {
    margin-top: 5px;
}

#page-mod-englishcentral-view .activity-topics {
    display: flex;
 }

 .englishcentral_reportsmenu_box {
    text-align: center;
    display: flex;
  }
  
  .englishcentral_reportsmenu_item {
    width: 250px;
    margin: 10px;
    border: 1px solid grey;
    padding: 8px;
    margin-right: 20px;
  }
  
  .englishcentral_reportsmenu_itembutton button{
    width: 200px;
    height: 60px;
  }
  .mod_ec_returntoreports {
    margin: auto;
    display: block;
    font-weight: bold;
    width: 200px;
    padding: 10px;
    background-color: lightgrey;
  }
  .mod_ec_chartcontainer .chart-area .chart-image, .mod_ec_chartcontainer .chart-area {
    min-height: 100%;
  }
  .mod_ec_chartcontainer .chart-area {
    height: 100%;
  }

